--- a/.github/workflows/reusableWorkflow.yml
+++ b/.github/workflows/reusableWorkflow.yml
@@ -43,13 +43,6 @@ jobs:
         restore-keys: |
           ${{ runner.os }}-maven-       
     - name: Deploy to dev
-      env:
-        USERNAME: ${{ secrets.connected_app_client_id}}
-        PASSWORD: ${{ secrets.connected_app_client_secret}}
-        KEY: ${{ secrets.key }}
-        API_ID: ${{secrets.dev_api_id}}
-        PLATFORM_CLIENT_ID: ${{secrets.org_client_id}}
-        PLATFORM_CLIENT_SECRET: ${{secrets.org_client_secret}}
       run: |
         mvn deploy --settings .maven/settings.xml -DskipMunitTests -DmuleDeploy \
         -Dclient.id="${{ secrets.CONNECTED_APP_CLIENT_ID }}" \
@@ -66,72 +59,48 @@ jobs:
     runs-on: ubuntu-latest
     steps:    
     - name: Checkout this repo
-      uses: actions/checkout@v3
+      uses: actions/checkout@v4
     - name: Cache dependencies
-      uses: actions/cache@v3
+      uses: actions/cache@v4
       with:
         path: ~/.m2/repository
         key: ${{ runner.os }}-maven-${{ hashFiles('**/pom.xml') }}
         restore-keys: |
           ${{ runner.os }}-maven-
-    - uses: actions/download-artifact@v3
-      with:
-        name: artifacts
     - name: Deploy to qa
-      env:
-        USERNAME: ${{ secrets.connected_app_client_id }}
-        PASSWORD: ${{ secrets.connected_app_client_secret}}
-        KEY: ${{ secrets.key }}
-        API_ID: ${{secrets.dev_api_id}}
-        PLATFORM_CLIENT_ID: ${{secrets.org_client_id}}
-        PLATFORM_CLIENT_SECRET: ${{secrets.org_client_secret}}
       run: |
-        artifactName=$(ls *.jar | head -1)
-        mvn deploy -DmuleDeploy \
-         -Dmule.artifact=$artifactName \
-         -Danypoint.username="$USERNAME" \
-         -Danypoint.password="$PASSWORD" \
-         -Ddecryption.key="$KEY" \
-         -Dmule.env=qa \
-         -Denv=qa \
-         -Dappname=algolia-app-qa-111 \
-         -Danypoint.platform.client_id="$PLATFORM_CLIENT_ID" \
-         -Danypoint.platform.client_secret="$PLATFORM_CLIENT_SECRET"
+        mvn deploy --settings .maven/settings.xml -DskipMunitTests -DmuleDeploy \
+        -Dclient.id="${{ secrets.CONNECTED_APP_CLIENT_ID }}" \
+        -Dclient.secret="${{ secrets.CONNECTED_APP_CLIENT_SECRET }}" \
+        -Ddecryption.key="${{ secrets.key }}" \
+        -Dmule.env=qa \
+        -Denv=qa \
+        -Dappname=algolia-app-dev-ch2 \
+        -Danypoint.platform.client_id="${{secrets.org_client_id}}" \
+        -Danypoint.platform.client_secret="${{secrets.org_client_secret}}"
   
   deployprod:
     needs: deployqa
     runs-on: ubuntu-latest
     steps:    
     - name: Checkout this repo
-      uses: actions/checkout@v3
+      uses: actions/checkout@v4
     - name: Cache dependencies
-      uses: actions/cache@v3
+      uses: actions/cache@v4
       with:
         path: ~/.m2/repository
         key: ${{ runner.os }}-maven-${{ hashFiles('**/pom.xml') }}
         restore-keys: |
           ${{ runner.os }}-maven-
-    - uses: actions/download-artifact@v3
-      with:
-        name: artifacts
     - name: Deploy to prod
-      env:
-        USERNAME: ${{ secrets.connected_app_client_id }}
-        PASSWORD: ${{ secrets.connected_app_client_secret}}
-        KEY: ${{ secrets.key }}
-        API_ID: ${{secrets.dev_api_id}}
-        PLATFORM_CLIENT_ID: ${{secrets.org_client_id}}
-        PLATFORM_CLIENT_SECRET: ${{secrets.org_client_secret}}
       run: |
-        artifactName=$(ls *.jar | head -1)
-        mvn deploy -DmuleDeploy \
-         -Dmule.artifact=$artifactName \
-         -Danypoint.username="$USERNAME" \
-         -Danypoint.password="$PASSWORD" \
-         -Ddecryption.key="$KEY" \
-         -Dmule.env=prod \
-         -Denv=prod \
-         -Dappname=algolia-app-prod-111 \
-         -Danypoint.platform.client_id="$PLATFORM_CLIENT_ID" \
-         -Danypoint.platform.client_secret="$PLATFORM_CLIENT_SECRET"
+        mvn deploy --settings .maven/settings.xml -DskipMunitTests -DmuleDeploy \
+        -Dclient.id="${{ secrets.CONNECTED_APP_CLIENT_ID }}" \
+        -Dclient.secret="${{ secrets.CONNECTED_APP_CLIENT_SECRET }}" \
+        -Ddecryption.key="${{ secrets.key }}" \
+        -Dmule.env=prod \
+        -Denv=prod \
+        -Dappname=algolia-app-dev-ch2 \
+        -Danypoint.platform.client_id="${{secrets.org_client_id}}" \
+        -Danypoint.platform.client_secret="${{secrets.org_client_secret}}"
          
