--- a/.github/workflows/reusableWorkflow.yml
+++ b/.github/workflows/reusableWorkflow.yml
@@ -32,6 +32,7 @@ jobs:
   deploydev:
     needs: build
     runs-on: ubuntu-latest
+    environment: dev
     steps:    
     - name: Checkout this repo
       uses: actions/checkout@v4
@@ -47,7 +48,7 @@ jobs:
         mvn deploy --settings .maven/settings.xml -DskipMunitTests -DmuleDeploy \
         -Dclient.id="${{ secrets.CONNECTED_APP_CLIENT_ID }}" \
         -Dclient.secret="${{ secrets.CONNECTED_APP_CLIENT_SECRET }}" \
-        -Ddecryption.key="${{ secrets.key }}" \
+        -Ddecryption.key="${{ secrets.securekey }}" \
         -Dmule.env=dev \
         -Denv=dev \
         -Dappname=algolia-app-dev-ch2 \
@@ -57,6 +58,7 @@ jobs:
   deployqa:
     needs: deploydev
     runs-on: ubuntu-latest
+    environment: qa
     steps:    
     - name: Checkout this repo
       uses: actions/checkout@v4
@@ -72,7 +74,7 @@ jobs:
         mvn deploy --settings .maven/settings.xml -DskipMunitTests -DmuleDeploy \
         -Dclient.id="${{ secrets.CONNECTED_APP_CLIENT_ID }}" \
         -Dclient.secret="${{ secrets.CONNECTED_APP_CLIENT_SECRET }}" \
-        -Ddecryption.key="${{ secrets.key }}" \
+        -Ddecryption.key="${{ secrets.securekey }}" \
         -Dmule.env=qa \
         -Denv=qa \
         -Dappname=algolia-app-qa-ch2 \
@@ -82,6 +84,7 @@ jobs:
   deployprod:
     needs: deployqa
     runs-on: ubuntu-latest
+    environment: prod
     steps:    
     - name: Checkout this repo
       uses: actions/checkout@v4
@@ -97,7 +100,7 @@ jobs:
         mvn deploy --settings .maven/settings.xml -DskipMunitTests -DmuleDeploy \
         -Dclient.id="${{ secrets.CONNECTED_APP_CLIENT_ID }}" \
         -Dclient.secret="${{ secrets.CONNECTED_APP_CLIENT_SECRET }}" \
-        -Ddecryption.key="${{ secrets.key }}" \
+        -Ddecryption.key="${{ secrets.securekey }}" \
         -Dmule.env=prod \
         -Denv=prod \
         -Dappname=algolia-app-prod-ch2 \
