--- a/.github/workflows/reusableWorkflow.yml
+++ b/.github/workflows/reusableWorkflow.yml
@@ -26,7 +26,7 @@ jobs:
         nexus_username: ${{ secrets.nexus_username }}
         nexus_password: ${{ secrets.nexus_password }}
         KEY: ${{ secrets.decryption_key }}
-      run: mvn test --settings .maven/settings.xml -Dsecure.key="$KEY"
+      run: mvn test --settings .maven/settings.xml -Dsecure.key="$KEY" -Dmule.env=dev
     - name: Upload MUnit reports
       uses: actions/upload-artifact@v3
       with:
