--- a/.github/workflows/reusableWorkflow.yml
+++ b/.github/workflows/reusableWorkflow.yml
@@ -23,10 +23,12 @@ jobs:
         java-version: 8
     - name: Test with Maven
       env:
-        nexus_username: ${{ secrets.nexus_username }}
-        nexus_password: ${{ secrets.nexus_password }}
+        nexus_username: admin
+        nexus_password: admin
         KEY: ${{ secrets.key }}
-      run: mvn test --settings .maven/settings.xml -Dsecure.key="$KEY" -Dmule.env=dev
+      run: mvn test --settings .maven/settings.xml \
+           -Dsecure.key="$KEY" \
+           -Dmule.env=dev
     - name: Upload MUnit reports
       uses: actions/upload-artifact@v3
       with:
