--- a/.github/workflows/reusableWorkflow.yml
+++ b/.github/workflows/reusableWorkflow.yml
@@ -22,10 +22,16 @@ jobs:
         distribution: 'zulu'
         java-version: 8
     - name: Test with Maven
-      run: mvn test --settings .maven/settings.xml -Dsecure.key=mule -Dmule.env=dev
+      env:
+        nexus_username: ${{ secrets.nexus_username }}
+        nexus_password: ${{ secrets.nexus_password }}
+        KEY: ${{ secrets.decryption_key }}
+      run: mvn test --settings .maven/settings.xml -Dsecure.key="$KEY"
     - name: Upload MUnit reports
       uses: actions/upload-artifact@v3
-
+      with:
+        name: munit-test-reports
+        path: target/site/munit/coverage/
   
   build:
     needs: test
